--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e4fb871c71.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>TV Shows</title>
 </head>
 <body>
@@ -31,8 +32,9 @@
     <div class="screen hidden"></div>
 
     <footer>
-        Created by <a href="https://github.com/Peter1907">Peter Beshara</a>&
+        Created by <a href="https://github.com/Peter1907">Peter Beshara </a>&
         <a href="https://github.com/DhuruvSingh">Dhuruv Singh</a>
     </footer>
+    <script src="./index.js" type="modules"></script>
 </body>
 </html>
