Add comments pop-up & it's functionalities

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
     </section>
     
     <!-- Reservation Popup -->
-    <div class="reservations"> </div>
+    <div class="reservations"></div>
 
     <!-- Comment Popup -->
-    <div class="popupModal active">
-    </div>
+    <div class="comments hidden"></div>
+    
     <!-- activates when showing the popup -->
     <div class="screen hidden"></div>
 
